--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
+    /* border: 1px dotted blue; */
 }  
 
 html,
@@ -18,11 +19,7 @@ body {
     font-family: 'Titillium Web', sans-serif;
     background-color: #222;
     color: whitesmoke;
-    margin: 0;
     cursor: default;
-}
-div{
-    border: 1px dotted blue;
 }
 .box {
     display: flex;
@@ -45,11 +42,13 @@ div{
   min-height: 100%;
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .box .row.footer {
   flex: 0 1 40px;
   text-align: center;
+  line-height: 40px;
 }
 
 .subpage{
@@ -59,17 +58,23 @@ div{
     padding:    0px auto;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
 }
+
 .pageContent{
     display: flex;
     flex-direction: row;
     width: 100%;
-}
-h2 + .pageContent{
-    height:     auto;
     min-height: 100%;
-    margin:     0px auto;
-    padding:    0px auto;
+    overflow-y: auto;
+    Height: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#popmanagement p, #popmanagement .btn{
+    margin: 5px;
 }
 /* TEXT FORMATTING */
 
@@ -88,18 +93,19 @@ h2{
     text-shadow: 5px 5px 10px black;
     width: 100%;
 }
-h2:after, #popmanagement:after
-{
+h2:after, #popmanagement:after{
     content:' ';
     display:block;
     border:1px solid gray;
 	margin:5px;
+    box-shadow: 1px 1px 3px black;
 }
 h3{
     font-size: 32px;
     font-family: 'Geo', sans-serif;
     margin: 0;
     text-shadow: 5px 5px 10px black;
+    display: inline;
 }
 p{
     margin: 0;
@@ -119,7 +125,7 @@ p{
     display: table;
     table-layout: fixed;
     width: 100%;
-    background: linear-gradient(124deg,rgb(255,0,0), rgb(255,127,0),rgb(255,255,0),rgb(127,255,0),rgb(0,255,0),rgb(0,255,127),rgb(0,255,255),rgb(0,127,255),rgb(0,0,255), rgb(127,0,255), rgb(255,0,255), rgb(255,0,127), rgb(255,0,0));
+    background: linear-gradient(124deg,rgb(255,0,0), rgb(255,127,0),rgb(255,255,0),rgb(127,255,0),rgb(0,255,0),rgb(0,255,127),rgb(0,255,255),rgb(0,127,255),rgb(0,0,255), rgb(127,0,255), rgb(255,0,255), rgb(255,0,127));
     background-size: 1800% 1800%;
     -webkit-animation: rainbow 180s ease infinite;
     -z-animation: rainbow 180s ease infinite;
@@ -145,11 +151,9 @@ p{
 }
 
 .topnav a:hover {
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.65);
     color: whitesmoke;
-    -webkit-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 1);
-    box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 1);
+    box-shadow: 0 0 32px 2px black;
 }
 
 .topnav a.active {
@@ -174,6 +178,7 @@ p{
 .res:nth-child(even) {
     background-color: #2b2b2b;
 } 
+/* MAIN */
 .notresourcebar{
     width: 80%; 
     display: flex;
@@ -181,29 +186,19 @@ p{
     min-height: 100%;
     margin:     0px auto;
     padding:    0px auto;
+    flex-wrap: nowrap;
 }
-/* MAIN */
 .main{
     padding: 5px;
     float: left;
-    width: 80%;
-    height:     auto;
-    min-height: 100%;
-    margin:     0px auto;
-    padding:    0px auto;
-    display: flex;
-    flex-wrap: wrap;
-}
-.subpage{
-    width: 100%;
+    width: 75%;
     height:     auto;
     min-height: 100%;
     margin:     0px auto;
     padding:    0px auto;
 }
 .btn{
-    min-height: 90px;
-    max-height: 150px;
+    height: 90px;
     width: 235px;
     border-radius: 15px;
     border: 2px solid #444;
@@ -215,17 +210,30 @@ p{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    box-shadow: 2px 2px 5px black, inset 2px 2px 5px #444;
 }
 .btn:hover{
     background-color: gray;
     color: black;
-    font-weight: 1000;
 }
+/* BUILDINGS */
 .building{
-    width: 50%;
-    min-width: 320px;
+    width: auto;
+    min-width: 500px;
+    min-height: 180px;
+    display: grid;
 }
 .buildingBtn{
+    float: right;
+    width: 100px;
+    height: 40px;
+}
+.building h3{
+    line-height: 60px;  
+}
+
+/* POPULATION */
+#workerList p{
     float: right;
 }
 
@@ -234,9 +242,14 @@ p{
     padding: 5px;
     float: left;
     height: 100%;
-    width: 20%;
+    width: 25%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 #gameLogContent{
+    height: 100%;
     min-height: 240px;
     overflow: auto;
 }
@@ -246,12 +259,20 @@ p{
 .message:nth-child(even){
     background-color: #2b2b2b;
 }
+
 /* RESPONSIVE STUFF */
 /* for mobile phones */
 @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
+    h1{
+        display: none;
+    }
     .topnav a.icon {
         display: block;
+    }
+    a.icon:after{
+        font-size: 48px;
+        content: " Idle Empire"
     }
     .topnav.responsive {
         position: relative;
@@ -263,19 +284,29 @@ p{
     }
     #resourcebar, .main, .gameLog{
         width: 100%;
+        height: fit-content;
     }
     .building{
+        min-width: 100%;
+    }
+    .notresourcebar{
         width: 100%;
+        height: fit-content;
+        flex-direction: column;
     }
 }
 /* for medium sized devices */
-@media screen and (min-width:600px) and (max-width:1024px){
+@media screen and (min-width:600px) and (max-width:1000px){
     #resourcebar{
-        width: 35%;
+        width: 40%;
     }
     .notresourcebar{
-        width: 65%;
+        width: 60%;
         float: right;
+        height: 100%;
+        flex: 1;
+        justify-content: center;
+        flex-direction: column;
     }
     .main{
         width: 100%;
