--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ h3{
     font-family: 'Geo', sans-serif;
     margin: 0;
     text-shadow: 5px 5px 10px black;
-    display: inline;
 }
 p{
     margin: 0;
@@ -220,13 +219,14 @@ p{
 .building{
     width: auto;
     min-width: 500px;
-    min-height: 180px;
+    min-height: 120px;
     display: grid;
 }
 .buildingBtn{
     float: right;
     width: 100px;
     height: 40px;
+    display: inline;
 }
 .building h3{
     line-height: 60px;  
@@ -318,7 +318,7 @@ p{
         width: 100%;
     }
     .building{
-        width: 100%;
+        min-width: 100%;
     }
 }
 
