--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ body {
     margin: 5px;
 }
 
+img{
+    vertical-align: -20%;
+}
 /* TEXT FORMATTING */
 
 h1 {
@@ -219,7 +222,7 @@ p{
 /* BUILDINGS */
 .building{
     width: auto;
-    min-width: 500px;
+    width: 500px;
     min-height: 120px;
     display: grid;
 }
@@ -229,16 +232,18 @@ p{
     height: 40px;
     display: inline;
 }
-.building h3{
-    line-height: 60px;  
+.buildingCosts{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 /* POPULATION */
 #popmanagement{
-    width: 30%;
+    width: 27.5%;
 }
 #workerList{
-    width: 70%;
+    width: 72.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -277,7 +282,7 @@ p{
 #gameLogContent{
     height: 100%;
     min-height: 240px;
-    overflow: auto;
+    overflow-y: hidden;
 }
 .message{
     padding: 10px;
